--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,6 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+// @tailwind base;
+// @tailwind components;
+// @tailwind utilities;
 
 $primary-color: #cfb0ef;
 $shadow: 0px 0px 10px rgba(139, 39, 242, 1);
@@ -8,6 +8,17 @@ $shadow: 0px 0px 10px rgba(139, 39, 242, 1);
 @font-face {
   font-family: "Cloud";
   src: url("../fonts/CloudScript-Regular.otf") format("opentype");
+}
+
+@font-face {
+  font-family: "timeline-icons";
+  src:url("../fonts/webzed-font-1.eot");
+  src:url("../fonts/webzed-font-1.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/webzed-font-1.woff") format("woff"),
+    url("../fonts/webzed-font-1.ttf") format("truetype"),
+    url("../fonts/webzed-font-1.svg#untitled-font-1") format("svg");
+  font-weight: normal;
+  font-style: normal;
 }
 
 .font {
@@ -50,4 +61,98 @@ $shadow: 0px 0px 10px rgba(139, 39, 242, 1);
       font-variant: small-caps;
     }
   }
+}
+
+.timeline-detail {
+  &::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    height: 18px;
+    width: 18px;
+    border-radius: 20px;
+    z-index: 1;
+    border: 1px solid #aaa;
+    background: #fff
+  }
+}
+
+.icon-timeline {
+  font-size: 3.5em;
+  line-height: 1;
+  color: #fd6b9a;
+  &::before {
+    font-family: "timeline-icons" !important;
+    font-style: normal !important;
+    font-weight: normal !important;
+    font-variant: normal !important;
+    text-transform: none !important;
+    speak: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+}
+
+
+
+.icon-home:before {
+  content: "\61";
+}
+.icon-email-plane:before {
+  content: "\63";
+}
+.icon-cake:before {
+  content: "\62";
+}
+.icon-camera:before {
+  content: "\64";
+}
+.icon-ciurclke:before {
+  content: "\65";
+}
+.icon-star:before {
+  content: "\66";
+}
+.icon-heart:before {
+  content: "\67";
+}
+.icon-tie:before {
+  content: "\68";
+}
+.icon-wine-glass:before {
+  content: "\69";
+}
+.icon-facebook:before {
+  content: "\6a";
+}
+.icon-twitter:before {
+  content: "\6b";
+}
+.icon-instagram:before {
+  content: "\6c";
+}
+.icon-tripadvisor:before {
+  content: "\6d";
+}
+.icon-pinterest:before {
+  content: "\6e";
+}
+.icon-caret-down:before {
+  content: "\6f";
+}
+.icon-caret-right:before {
+  content: "\70";
+}
+.icon-bars:before {
+  content: "\71";
+}
+.icon-quote:before {
+  content: "\72";
+}
+.icon-right-open-big:before {
+  content: "\73";
+}
+.icon-left-open-big:before {
+  content: "\74";
 }
